2012-06-04 --:--:-- Gill <gmail gillemorris>
	

2012-06-04 15:43:31 Gill <gmail gillemorris>
	Updating a bunch of interfaces; hopefully reduce the complexity
	sufficiently that variable lanes, turning traffic, etc can be
	implemented reasonably easily.

	* interfaces/Car.java: 
	    - merged updateVelocity and updatePosition into move
	    - removed stopped and getChar

2012-06-04 12:18:38 Gill <gmail gillemorris>
	* Makefile: now uses restored package heirarchy

2012-06-03 20:37:51 Gill <gmail gillemorris>
	* Main.java: minor changes; can pass RL parameters in as arguments
	* interfaces/LearningModule.java: ""
	* LearningModuleImpl.java: "". Also reformatted the code and some
	    logic here and there. While some design aspects remain
	    questionable I change it further due to time constraints.
	    Unless something is suggested.

2012-06-03 --:--:-- Gill <gmail gillemorris>
	* CarImpl.java: stopped() now returns whether the car has zero
	   velocity (rather than zero position).
	* Main.java: now evaluates the success of the learning algorithm.

2012-06-03 6:03: -- Nathan
    *updated to have 4 traffic lights. this required some reworking of
     how we update car velocities as we don't want to move a car across
     an intersection when there is no room for it on the other side
    *a few other minor changes here and there to handle a larger map, etc
    *tried to implement turning cars but backed out before it got too
     complex. I don't think we should bother with implementing this - it
     requires quite a lot of fiddlyness to do and really adds very little
     value to the learning as our learning depends only on cars waiting,
     not on direction they could be turning

2012-06-03 04:36:-- Gill <gmail gillemorris>
	* Viewer.java: added some rudimentary error checking
	* RoadMapImp.java: catAt and roadAt no longer switch the axes.
	    also, decided we needed to follow convention in our definitions